# cloudmailin

./: .flake8  .gitignore  Dockerfile  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt  todelete.txt
.github/workflows/: ci.yml  deployment_caller.yml  production-deployment.yml  reusable_deployment.yml  staging-deployment.yml
APITests/: Cloudmailin Google Cloud run.bru  Cloudmailin Production.bru  Cloudmailin Staging.bru  Cloudmailin local.bru  bruno.json
allure-report/: index.html
allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
cloudmailin/: __init__.py  config.py  config_loader.py  db.py  email_handlers.py  generic.py  handler_registry.py  health.py  logging_setup.py  schema.sql  schemas.py
cloudmailin/handlers/: __init__.py  (+3 more)
config/: handler_config.yaml
coverage/: class_index.html  function_index.html  index.html  z_15d4d0bc56c2d6a2___init___py.html  z_15d4d0bc56c2d6a2_db_py.html  z_15d4d0bc56c2d6a2_generic_py.html  z_15d4d0bc56c2d6a2_handler_registry_py.html  z_15d4d0bc56c2d6a2_health_py.html  z_15d4d0bc56c2d6a2_logging_setup_py.html  z_15d4d0bc56c2d6a2_schemas_py.html  z_212dfae28f0983fc___init___py.html  z_212dfae28f0983fc_base_handler_py.html  z_212dfae28f0983fc_campaign_classifier_py.html  z_212dfae28f0983fc_steps_py.html
gh-pages/: index.html
tests/: conftest.py  test_config_loader.py  test_email_handlers.py  test_email_schema.py  test_factory.py  test_generic.py  test_generic_view.py  test_handler_registry.py  test_logging.py
(+3163 files in other folders)
