[tool.poetry]
name = "cloudmailin"
version = "0.1.0"
description = ""
authors = ["Alvaro Aguilar <alvaro.aguilar.lopez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
gunicorn = "^23.0.0"
pydantic = "^2.10.3"
google-cloud-firestore = "^2.19.0"
firebase-admin = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
